# parking-system

./: .env  .gitignore  123.py  Dockerfile  Report.csv  docker-compose.yml  info.txt  main.py  pyproject.toml  requirements.txt  test.py
docker/: app.sh
migrations/: env.py
migrations/versions/: 09a83ab985aa_init.py  16b15aafac33_rate_to_ratetime_to_datebase.py  26eef329883a_add_telegram_chat_id.py  2bcb27d32f17_add_in_parking.py  352e7eb3be57_init.py  4113f51b3bf2_fixdatabirthday.py  53da74615f13_fix_log_table.py  f93bae712e88_rate_to_ratetime_to_datebase2.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  pg_internal.init
postgres-data/base/5/: 1247  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  16906  16909  16911  16912  16916  16918  16919  16923  16925  16927  16928  16932  16934  16935  16939  16946  16950  16951  16953  16960  16961  16965  16972  16976  16977  16978  16979  2224  2224_vm  2579  2604  2606  2606_vm  (+34 more)
postgres-data/global/: 1260  1260_vm  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
postgres-data/pg_xact/: 0000
src/conf/: cloudinary.py  config.py  messages.py
src/database/: db.py
src/entity/: models.py
src/pages/: router.py
src/repository/: admin.py  log.py  profile.py  reports.py  users.py
src/routes/: admin.py  auth.py  plates.py  reports.py  users.py
src/schemas/: admin.py  user.py
src/services/: email.py  get_photo.py  plates.py  telegram_bot.py  tg_bot.py  tg_services.py
src/templates/: about.html  base.html  footer.html  index.html  login.html  nav.html  pricing.html  search.html  signup.html
(+2 files in other folders)
