[tool.poetry]
name = "parking-system"
version = "0.1.0"
description = ""
authors = ["Roman <Tesmail@i.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
redis = "^5.0.4"
fastapi-limiter = "^0.1.6"
fastapi-mail = "^1.4.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
asyncpg = "^0.29.0"
libgravatar = "^1.0.4"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
cloudinary = "^1.40.0"
python-multipart = "^0.0.9"
tensorflow = "^2.16.1"
pandas = "^2.2.2"
pytesseract = "^0.3.10"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
