[tool.poetry]
name = "untitled"
version = "0.1.0"
description = ""
authors = ["Bohdan Boiprav <122865615+bohdanboiprav@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.4"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
redis = "^5.0.4"
fastapi-limiter = "^0.1.6"
fastapi-mail = "^1.4.1"
python-jose = "^3.3.0"
asyncpg = "^0.29.0"
libgravatar = "^1.0.4"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
cloudinary = "^1.40.0"
python-multipart = "^0.0.9"
pandas = "^2.2.2"
pytesseract = "^0.3.10"
matplotlib = "^3.8.4"
requests = "^2.31.0"
greenlet = "^3.0.3"
opencv-python = "^4.9.0.80"
aiogram = "^3.6.0"
tensorflow = "2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
